# DibsData

./: README.md  pyproject.toml
src/dibs_data/: data_utils.py
src/dibs_data/data/auxiliary/weather_data_TMYx_2007_2021/: DEU_BB_Holzdorf.AB.104760_TMYx.2007-2021.epw  DEU_BW_Coleman.AP.107280_TMYx.2007-2021.epw  DEU_BW_Donaueschingen-Villingen.AP.109120_TMYx.2007-2021.epw  DEU_BW_Friedrichshafen.AP.109350_TMYx.2007-2021.epw  DEU_BW_Karlsruhe-Baden-Baden.AP.107275_TMYx.2007-2021.epw  DEU_BW_Lahr-Schwarzwald.AP.108050_TMYx.2007-2021.epw  DEU_BW_Lechfeld.AB.108560_TMYx.2007-2021.epw  DEU_BW_Mannheim.107290_TMYx.2007-2021.epw  DEU_BW_Schwabisch.Hall-Wurth.AP.107450_TMYx.2007-2021.epw  DEU_BY_Altenstadt.AP.109540_TMYx.2007-2021.epw  DEU_BY_Ansbach.Katterbach.AB.107550_TMYx.2007-2021.epw  DEU_BY_Feldkirchen-Mitterhausen.AF.107880_TMYx.2007-2021.epw  DEU_BY_Furstenzell.108950_TMYx.2007-2021.epw  DEU_BY_Grafenwohr.AB.106870_TMYx.2007-2021.epw  DEU_BY_Hof.106850_TMYx.2007-2021.epw  DEU_BY_Hohenfels.AB.107750_TMYx.2007-2021.epw  DEU_BY_Illesheim.AB.107520_TMYx.2007-2021.epw  DEU_BY_Kummersbruck.107710_TMYx.2007-2021.epw  DEU_BY_Memmingen-Allgau.AP.109470_TMYx.2007-2021.epw  DEU_BY_Munich.AP.108700_TMYx.2007-2021.epw  DEU_BY_Neuburg.AB.108530_TMYx.2007-2021.epw  DEU_BY_Nurnberg.AP.107630_TMYx.2007-2021.epw  DEU_BY_Weihenstephan.Durna.108630_TMYx.2007-2021.epw  DEU_HB_Diepholz.Dummerland.AP.103210_TMYx.2007-2021.epw  DEU_HE_Frankfurt-Egelsbach.AP.106325_TMYx.2007-2021.epw  DEU_HE_Frankfurt.AP.106370_TMYx.2007-2021.epw  DEU_HE_Kassel.Calden.AP.104360_TMYx.2007-2021.epw  DEU_HE_Wiesbaden.AB.106330_TMYx.2007-2021.epw  DEU_HH_Hamburg-Schmidt.AP.101470_TMYx.2007-2021.epw  DEU_HH_Hamburg.Finkenwerder.AP.101490_TMYx.2007-2021.epw  DEU_MV_Greifswalder.Oie.100970_TMYx.2007-2021.epw  DEU_MV_Heringsdorf.AP.101920_TMYx.2007-2021.epw  DEU_MV_Neubrandenburg.Trollenhagen.AP.102810_TMYx.2007-2021.epw  DEU_MV_Rostock-Laage.AP.101720_TMYx.2007-2021.epw  DEU_MV_Schwerin-Parchim.AP.101624_TMYx.2007-2021.epw  DEU_MV_Waren.102680_TMYx.2007-2021.epw  (+46 more)
(+28 files in other folders)
