[project]
name = "dibs_data"
version = "1.0.1"
description = "Data used for DIBS---Dynamic-ISO-Building-Simulator simulation program for calculating the space heating, occupancy hot water, cooling and electricity demand of German non-residential buildings. Further the DIBS calculates the heating value based energy uses, the primary energy and the greenhouse gas emission based on the defined factors of the German building energy ordinance (Gebäudeenergiegesetz). The underlying resistance-capacity-model is based on the simplified hourly method of ISO 13790:2008."
readme = "README.md"
requires-python = ">=3.10.0"

authors = [
    { name = "Julian Bischof", email = "j.bischof@iwu.de" },
    { name = "Simon Knoll" },
    { name = "Michael Hörner" },
    { name = "Wail Samjouni", email = "w.samjouni@iwu.de" },
    { name = "André Müller", email = "a.mueller@iwu.de" },
    { name = "Jens Calisti", email = "j.calisti@iwu.de" },
]

[tool.setuptools.package-data]
"dibs_data.data" = ['*.csv']
"dibs_data.data.LCA" = ['*.csv']
"dibs_data.data.auxiliary.norm_profiles" = ['*.csv']
"dibs_data.data.auxiliary.occupancy_schedules" = ['*.csv']
"dibs_data.data.auxiliary.TEKs" = ['*.csv']
"dibs_data.data.auxiliary.weather_data" = ['*.epw', '*.csv']
"dibs_data.data.auxiliary.weather_data_TMYx_2007_2021" = ['*.epw', '*.csv']

keywords = ["Building", "Building-Stock", "Non-Domestic", "Non-Residential", "Operational", "Energy", "Greenhouse Gas", "Global Warming Potential", "Simulation", "Model", "Germany", "ISO 13790", "5R1C"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

addopts = [
    "--import-mode=importlib",
]

[project.urls]
Repository = "https://github.com/IWUGERMANY/DibsData"

[tool.black]
line-length = 88
target-version = ['py310']

[build-system]
requires = ["flit_core >=2"]
build-backend = "flit_core.buildapi"
